# Triton_OpenPPL_Backend

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: TritonOpenPPLBackendConfig.cmake.in
sample/client/: sample_maskrcnn.py
sample/models/maskrcnn/: config.pbtxt
sample/models/maskrcnn/1/: model.onnx
src/: libtriton_openppl.ldscript  openppl.cc  openppl_utils.cc  openppl_utils.h
